2004-08-22  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-mlspl.el (gnus-group-split-update): Fix docstring.

2004-08-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el: Use inhibit-read-only instead of buffer-read-only.
	(gnus-narrow-to-page): Don't assume point-min == 1.
	(gnus-article-edit-mode): Derive from message-mode.

	* gnus-score.el (gnus-score-find-bnews): Simplify and don't assume
	point-min == 1.

	* imap.el (imap-parse-address-list, imap-parse-body-ext):
	Disable incorrect use of `assert'.

	[Emacs/trunk 2004-03-22]

	* message.el (message-mode): Set comment-start-skip.

	[Emacs/trunk 2004-03-04]

2004-08-22  Sam Steingold  <sds@gnu.org>

	* pop3.el (pop3-leave-mail-on-server): New user variable.
	(pop3-movemail): Delete mail only when it is nil.

	[Emacs/trunk 2003-06-11]

2004-08-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* netrc.el, tls.el: Removed; use files from ../net instead.

2004-08-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-mule.el, smiley-ems.el: Removed obsolete files.

	* mailcap.el (mailcap-mime-data): Mark as risky.

	[Emacs/trunk 2004-04-21]

	* gnus.el (gnus-group, gnus-summary, gnus-summary-sort): Fix
	custom-manual entries.

	* time-date.el: Removed.  Merged into ../calendar/time-date.el.

2004-08-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* blink.pbm, blink.xpm, braindamaged.xpm, cry.xpm, dead.xpm,
	evil.xpm, forced.xpm, frown.xpm, grin.xpm, indifferent.xpm,
	reverse-smile.xpm, sad.pbm, sad.xpm, smile.xpm, time-date.el,
	wry.xpm: Added new files from the v5_10 branch of Gnus.

2004-07-22  Andreas Schwab  <schwab@suse.de>

	Import Gnus 5.10 from the v5_10 branch of the Gnus repository.

2004-05-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-text-html-renderer): Make sure w3m exists in
	addition to emacs-w3m.

2004-05-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-msg.el (gnus-summary-followup-with-original): Document
	yanking of region when active.
