@@ -49,7 +49,7 @@
 
 (defgroup gnus-article nil
   "Article display."
-  :link '(custom-manual "(gnus)The Article Buffer")
+  :link '(custom-manual "(gnus)Article Buffer")
   :group 'gnus)
 
 (defgroup gnus-article-treat nil
@@ -2401,7 +2401,7 @@ The `gnus-list-identifiers' variable specifies what to do."
 	(regexp (if (consp gnus-list-identifiers)
 		    (mapconcat 'identity gnus-list-identifiers " *\\|")
 		  gnus-list-identifiers))
-	(inhibit-read-only))
+	(inhibit-read-only t))
     (when regexp
       (save-excursion
 	(save-restriction
